<resources>
    <string name="app_name">MobReactor</string>

    <string name="ndo">Open navigation drawer</string>
    <string name="ndc">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="author_not_loaded">Ник автора не загружен</string>
    <string name="img_tags">Тэги изображения не загружены</string>
    <string name="date_date">Date::Date</string>
    <string name="sync_with_reactor">Sync w/ Reactor</string>
    <string name="functions">Functions</string>
    <string name="options">Options</string>
    <string name="action_load_previouspage">Предыдущая страница</string>
    <string name="action_load_nextpage">Следующая страница</string>
    <string name="save_dir">MRF</string>
    <string name="ave_dirstring">Сохранить путь</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">Настройки</string>


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="error_getPlainCookies">Ошибка при получении чистых кукисов.\n Перезапустите приложение.\n Hashcode: </string>
    <string name="goback_"><![CDATA[<--]]></string>
    <string name="sync">Sync</string>
    <string name="goforw_"><![CDATA[-->]]></string>
</resources>
