<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/functions">
        <menu>
            <item
                android:id="@+id/action_load_tfa"
                android:icon="@drawable/ic_sync_white_48dp"
                android:title="Launch TFA" />
        </menu>
    </item>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/action_login"
                android:icon="@android:drawable/ic_menu_add"
                android:title="User" />
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_white_48dp"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
