<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/image_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:shadowColor="#ff0000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/author_not_loaded"
            android:textColor="@color/orange_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/image_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:paddingTop="5dp"
            android:text="@string/img_tags"
            android:textColor="@color/dark_green"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:srcCompat="@drawable/ic_sync_black_48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="@string/date_date"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>